--- a/css/app.css
+++ b/css/app.css
@@ -9,6 +9,9 @@ body {
     background-color: #F6F8F9;
 }
 
+ul {
+    list-style: none;
+}
 /* HEADER */
 
 .page-header {
@@ -17,16 +20,48 @@ body {
 
 /* MAIN */
 
-.page-main{
+.page-main {
     padding: 16px;
 }
 
-.container{
+.container {
     max-width: 800px;
     margin: 0px auto;
 }
+
 .btn, .content{
     background-color: white;
     padding: 16px;
     border-radius: 4px;
 }
+
+.content {
+    padding: 16px 60px;
+}
+
+/* BUTTONS */
+.btn{
+    margin-bottom: 2px;
+}
+
+.btn-task {
+    background-color: #14AAF5;
+    padding: 6px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 4px;
+}
+
+.btn-sect {
+    background-color: white;
+    padding: 6px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 4px;
+}
+
+
